[tool.poetry]
name = "hypermodern-python"
version = "0.1.0"
authors = ["eduhumb <eduhumb@gmail.com>"]
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eduhumb/hypermodern-python"
repository = "https://github.com/eduhumb/hypermodern-python"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hypermodern_python = "hypermodern_python.console:main"
